[package]
name = "fruitnation-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "fn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
ethers = { version = "2.0", features = ["rustls"] }
rand = "0.8"
bip39 = "2.0"
sha2 = "0.10"
hex = "0.4"
colored = "2.0"
dialoguer = "0.11"
crossterm = "0.27"
tui = "0.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
urlencoding = "2.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }